set lib dependancy

--- a/notebook/Dynamic_Topic_Model.ipynb
+++ b/notebook/Dynamic_Topic_Model.ipynb
@@ -170,11 +170,7 @@
     "import pandas as pd # for load excel data\n",
     "import pyBigKinds as pbk # for preprocessing news text data\n",
     "import tomotopy as tp # for topic modeling\n",
-    "import pyLDAvis # for visualize the Topic Modeling result\n",
-    "import matplotlib as mpl\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib.font_manager as fm\n",
-    "import matplotlib.cm as cm\n",
+    "import matplotlib.pyplot as plt # for visualize the plot\n",
     "\n",
     "# for ignore the warning message\n",
     "import warnings\n",
