modified all ipynb file

--- a/notebook/Latent_Dirichlet_Allocation.ipynb
+++ b/notebook/Latent_Dirichlet_Allocation.ipynb
@@ -165,6 +165,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Precautions\n",
+    "\n",
+    "- If you re-execute the code, there may be a slight difference in the result.\n",
+    "\n",
+    "- Of course, the difference in the number or content of the topic will not be significant due to the seed number and the learning rate, but the number of the topic changes."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -554,31 +565,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Topic Interpretations\n",
+    "### The result of Topic Modeling \n",
     "\n",
-    "### Topic #0 (352,882 tokens)\n",
-    "#### Theme: College Entrancement of Handong University\n",
-    "- Keywords such as \"전형\", \"모집\", \"선발\", \"반영\", and \"수능\" refers to a topic related to the university entrance examination system at Handong University.\n",
+    "- Topic #0: Topic related to the university entrance examination system.\n",
     "\n",
-    "### Topic #1 (186,788 tokens)\n",
-    "#### Theme: Philosophy of Education at Handong Global University\n",
-    "- Keywords such as \"지역\", \"포항\", \"글로벌\", \"경북\", and \"포항시\" points to articles related to Handong University's business collaborating with the local community.\n",
+    "- Topic #1: Topic related to Handong University's business collaborating with the local community.\n",
     "\n",
-    "### Topic #2 (276,617 tokens)\n",
-    "#### Theme: Professors in Politics and Government Affairs\n",
-    "- Keywords such as \"국민\", \"인권\", \"정치\", \"자유\", and \"검찰\" indicates about professors' involvement in political discourse, governmental policies affecting academia, or national issues where academic expertise is highlighted.\n",
+    "- Topic #2: Topic related to the Professors in Politics and Government Affairs\n",
     "\n",
-    "### Topic #3 (238,494 tokens)\n",
-    "#### Theme: North Korea and Inter-Korean Relations\n",
-    "- When checking the following keywords such as \"대화\", \"협상\", \"북한\", \"회담\", and \"남북\", it can be seen that the topics are mainly articles interviewed by Handong University professors at the time of the inter-Korean political talks.\n",
+    "- Topic #3: Topic related to North Korea and Inter-Korean Relations\n",
     "\n",
-    "### Topic #4 (354,298 tokens)\n",
-    "#### Theme: Religious Activities and Christian Identity\n",
-    "- With words like \"교회\", \"목사\", \"하나님\", \"기독교\", and \"학교\", this topic reflects the university's Christian foundation and its religious engagements.\n",
+    "- Topic #4: Topic related to Religious Activities and Christian Identity of Handong University\n",
     "\n",
-    "### Topic #5 (283,047 tokens)\n",
-    "#### Theme: International Relations and Global Affairs\n",
-    "- Keywords such as \"일본\", \"외교\", \"안보\", \"미군\", and \"동맹\" are related to the past interviews of Handong University professors on international community-related issues. Although they are not currently at Handong University, in the past, they often appeared in the news.\n"
+    "- Topic #5: Topic related to International Relations and Global Affairs"
    ]
   }
  ],
@@ -598,7 +597,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
