--- a/notebook/Dynamic_Topic_Model.ipynb
+++ b/notebook/Dynamic_Topic_Model.ipynb
@@ -160,6 +160,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Precautions\n",
+    "\n",
+    "- If you re-execute the code, there may be a slight difference in the result.\n",
+    "\n",
+    "- Of course, the difference in the number or content of the topic will not be significant due to the seed number and the learning rate, but the number of the topic changes."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -2745,7 +2756,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
