add graph & mathematics explanation in detail

--- a/notebook/Biterm_Topic_Model.ipynb
+++ b/notebook/Biterm_Topic_Model.ipynb
@@ -96,15 +96,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Mathematical Formulation\n",
+    "### Generative Process\n",
     "\n",
-    "In **BTM (Biterm Topic Model)**, the joint probability distribution for a biterm $ b $ (a pair of words) is given by:\n",
+    "1. **Word Distribution for Topics**:\n",
+    "   - For each topic $z$, draw a topic-specific word distribution $\\phi_z$ from a Dirichlet prior:\n",
+    "   $$\n",
+    "   \\phi_z \\sim \\text{Dir}(\\beta)\n",
+    "   $$\n",
     "\n",
-    "$$ P(b | \\theta, \\phi) = \\sum_{z} P(z | \\theta) P(b | z, \\phi) $$\n",
+    "2. **Topic Distribution**:\n",
+    "   - Draw a global topic distribution $\\theta$ for the entire corpus from a Dirichlet prior:\n",
+    "   $$\n",
+    "   \\theta \\sim \\text{Dir}(\\alpha)\n",
+    "   $$\n",
     "\n",
-    "*Here:\n",
-    "- **$ P(z | \\theta) $** is the probability of selecting a topic $ z $ given the overall topic distribution $ \\theta $ for the document collection.\n",
-    "- **$ P(b | z, \\phi) $** is the probability of generating the biterm $ b $ (word pair $ w_1, w_2 $) given the topic $ z $. This is defined as $ P(b | z, \\phi) = P(w_1 | z, \\phi) P(w_2 | z, \\phi) $ where $ P(w_1 | z, \\phi) $ and $ P(w_2 | z, \\phi) $ are the probabilities of generating words $ w_1 $ and $ w_2 $, respectively, from the word distribution $ \\phi $ of topic $ z $.\n",
+    "3. **Biterm Generation**:\n",
+    "   - For each biterm $b = (w_i, w_j)$ in the biterm set $B$:\n",
+    "     - Draw a topic assignment $z$ from the topic distribution $\\theta$:\n",
+    "     $$\n",
+    "     z \\sim \\text{Multinomial}(\\theta)\n",
+    "     $$\n",
+    "     - Draw two words $w_i$ and $w_j$ from the topic-specific word distribution:\n",
+    "     $$\n",
+    "     w_i, w_j \\sim \\text{Multinomial}(\\phi_z)\n",
+    "     $$\n",
     "\n"
    ]
   },
@@ -112,24 +127,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Generative Process\n",
-    "\n",
-    "- For each document:\n",
-    "   - Extract all biterms *(pairs of words)*.\n",
-    "   - For each biterm $b$:\n",
-    "     - Draw a topic $z_b \\sim \\text{Multinomial}(\\theta)$.\n",
-    "     - Draw the words $w_i$ and $w_j$ from $\\phi_{z_b}$."
+    "![BTM_Graphic](./img/BTM_Graphic.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Key Assumptions\n",
+    "### Mathematical Representation\n",
     "\n",
-    "- BTM assumes that the distribution of topics can be inferred from the global co-occurrence patterns of words rather than individual document statistics.\n",
+    "- **Biterm Likelihood**:\n",
+    "   The likelihood of a biterm $b = (w_i, w_j)$ being generated from the model is:\n",
+    "   $$\n",
+    "   P(b) = \\sum_z P(z) P(w_i | z) P(w_j | z)\n",
+    "   $$\n",
+    "   where $P(w_i | z) = \\phi_{z,i}$, $P(w_j | z) = \\phi_{z,j}$, and $P(z) = \\theta_z$.\n",
     "\n",
-    "- It treats each biterm independently when assigning topics, which helps in handling the sparsity of information in short texts."
+    "- **Corpus Likelihood**:\n",
+    "   The likelihood of the entire corpus, represented by the set of biterms $B$, is:\n",
+    "   $$\n",
+    "   P(B) = \\prod_{(i,j)} \\sum_z \\theta_z \\phi_{z,i} \\phi_{z,j}\n",
+    "   $$\n",
+    "   This aggregates word co-occurrence patterns across the corpus."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inference:\n",
+    "\n",
+    "BTM uses **collapsed Gibbs sampling** for inference, similar to LDA. The goal is to estimate the posterior distribution of the latent variables.\n",
+    "\n",
+    "1. **Conditional Probability for Topic Assignment**:\n",
+    "   The conditional distribution for the topic assignment $z$ of a biterm $b = (w_i, w_j)$ is:\n",
+    "   \n",
+    "   $$\n",
+    "   P(z | z_{-b}, B, \\alpha, \\beta) \\propto (n_z + \\alpha) \\cdot \\frac{n_{w_i|z} + \\beta}{\\sum_w (n_{w|z} + \\beta)} \\cdot \\frac{n_{w_j|z} + \\beta}{\\sum_w (n_{w|z} + \\beta)}\n",
+    "   $$\n",
+    "   where:\n",
+    "   - $n_z$ is the number of biterms assigned to topic $z$,\n",
+    "   - $n_{w_i|z}$ is the number of times word $w_i$ is assigned to topic $z$,\n",
+    "   - $\\alpha$ and $\\beta$ are hyperparameters of the Dirichlet priors.\n",
+    "\n",
+    "2. **Update Topic and Word Distributions**:\n",
+    "   Once the topic assignments are updated, the topic-word distributions $\\phi_z$ and the global topic distribution $\\theta$ are updated as:\n",
+    "   \n",
+    "   $$\n",
+    "   \\phi_{w|z} = \\frac{n_{w|z} + \\beta}{\\sum_w (n_{w|z} + \\beta)}\n",
+    "   $$\n",
+    "   \n",
+    "   $$\n",
+    "   \\theta_z = \\frac{n_z + \\alpha}{|B| + K \\alpha}\n",
+    "   $$\n",
+    "   where $|B|$ is the total number of biterms, and $K$ is the number of topics."
    ]
   },
   {
