--- a/notebook/Correlated_Topic_Model.ipynb
+++ b/notebook/Correlated_Topic_Model.ipynb
@@ -94,30 +94,66 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Mathematical Formulation\n",
+    "### Generative Process\n",
+    "CTM uses a logistic normal distribution to capture topic correlations, improving upon LDA's independence assumption. The generative process is as follows:\n",
     "\n",
-    "In CTM, the topic proportions for document $d$, denoted as $\\theta_d$, are generated using a logistic normal distribution:\n",
+    "1. **Topic Proportions**:\n",
+    "   - Draw topic proportions for each document from a logistic normal distribution:\n",
+    "   \n",
+    "   $$\n",
+    "   \\eta \\sim \\mathcal{N}(\\mu, \\Sigma)\n",
+    "   $$\n",
+    "   \n",
+    "   - Transform the normal variables $\\eta$ into the topic proportions using the following transformation:\n",
+    "   \n",
+    "   $$\n",
+    "   \\theta_i = \\frac{\\exp(\\eta_i)}{\\sum_{j=1}^K \\exp(\\eta_j)}\n",
+    "   $$\n",
     "\n",
-    "$$ \\eta_d \\sim \\mathcal{N}(\\mu, \\Sigma) $$\n",
-    "$$ \\theta_d = \\text{softmax}(\\eta_d) $$\n",
+    "2. **Document Generation**:\n",
+    "   - For each word in a document:\n",
+    "     - Draw a topic assignment $z_n$ from the multinomial distribution over topics:\n",
+    "     \n",
+    "     $$\n",
+    "     z_n \\sim \\text{Multinomial}(\\theta)\n",
+    "     $$\n",
+    "     \n",
+    "     - Draw a word $w_n$ from the topic-specific word distribution:\n",
+    "     \n",
+    "     $$\n",
+    "     w_n \\sim \\text{Multinomial}(\\beta_{z_n})\n",
+    "     $$\n",
     "\n",
-    "Here:\n",
-    "- $\\eta_d$ is a latent variable drawn from a multivariate normal distribution with mean vector $\\mu$ and covariance matrix $\\Sigma$.\n",
-    "- $\\Sigma$ captures the correlations between topics."
+    "This model allows for the correlation between topics, unlike LDA, where topic proportions are drawn independently."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Generative Process\n",
+    "![CTM_Graphic](./img/CTM_Graphic.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mathematical Representation\n",
+    "- **Logistic Normal Distribution**: Topic proportions are drawn from a logistic normal distribution, which is a transformation of a multivariate normal:\n",
+    "  \n",
+    "  $$\n",
+    "  \\eta \\sim \\mathcal{N}(\\mu, \\Sigma)\n",
+    "  $$\n",
+    "  \n",
+    "  The logistic transformation maps the natural parameters $\\eta$ to the simplex, producing the topic proportions $\\theta$.\n",
     "\n",
-    "- For each document $d$:\n",
-    "   - Draw the latent variable $\\eta_d \\sim \\mathcal{N}(\\mu, \\Sigma)$.\n",
-    "   - Transform $\\eta_d$ to $\\theta_d = \\text{softmax}(\\eta_d)$.\n",
-    "   - For each word $w_{dn}$:\n",
-    "     - Draw a topic $z_{dn} \\sim \\text{Multinomial}(\\theta_d)$.\n",
-    "     - Draw a word $w_{dn} \\sim \\text{Multinomial}(\\phi_{z_{dn}})$."
+    "- **Natural Parameterization**: The natural parameterization of a K-dimensional multinomial distribution is:\n",
+    "  \n",
+    "  $$\n",
+    "  p(z | \\eta) = \\exp(\\eta^\\top z - a(\\eta))\n",
+    "  $$\n",
+    "  \n",
+    "  where $a(\\eta) = \\log \\left( \\sum_{i=1}^K \\exp(\\eta_i) \\right)$ is the log normalizer."
    ]
   },
   {
@@ -126,11 +162,25 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "### Key Assumptions\n",
+    "### Inference\n",
+    "Posterior inference in CTM is challenging due to the non-conjugacy of the logistic normal and multinomial distributions. CTM uses **mean-field variational inference** to approximate the posterior.\n",
     "\n",
-    "- The topics are correlated, which is captured by the covariance matrix $\\Sigma$.\n",
+    "- **Variational Inference**: The variational distribution is factorized for the latent variables $\\eta$ and $z$:\n",
+    "  \n",
+    "  $$\n",
+    "  q(\\eta, z) = \\prod_{i=1}^K q(\\eta_i | \\lambda_i, \\nu_i^2) \\prod_{n=1}^N q(z_n | \\phi_n)\n",
+    "  $$\n",
     "\n",
-    "- The logistic normal distribution allows for modeling dependencies between topics."
+    "  Here, $\\lambda_i$ and $\\nu_i^2$ are the variational parameters for the Gaussian distribution of $\\eta$, and $\\phi_n$ is the variational parameter for the multinomial distribution of $z_n$.\n",
+    "\n",
+    "- **Optimization**: The variational parameters are optimized using **coordinate ascent**:\n",
+    "  1. Update $\\phi_n$, the variational parameter for $z_n$, as:\n",
+    "  \n",
+    "     $$\n",
+    "     \\phi_n \\propto \\exp(\\lambda + \\log(\\beta_{z_n}))\n",
+    "     $$\n",
+    "     \n",
+    "  2. Update $\\lambda$ and $\\nu^2$, the variational parameters for $\\eta$, using gradient ascent."
    ]
   },
   {
