--- a/notebook/Dynamic_Topic_Model.ipynb
+++ b/notebook/Dynamic_Topic_Model.ipynb
@@ -86,20 +86,7 @@
    "source": [
     "### Key Concept\n",
     "\n",
-    "- DTM captures topic evolution by modeling the topic distributions over time using a Gaussian distribution."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Mathematical Formulation\n",
-    "\n",
-    "- In DTM, the distribution over words for each topic at time $t$, denoted as $\\phi_{t,k}$, is modeled as a Gaussian distribution:\n",
-    "\n",
-    "$$ \\phi_{t,k} \\sim \\mathcal{N}(\\mu_{t,k}, \\Sigma) $$\n",
-    "\n",
-    "*Here, $\\mu_{t,k}$ is the mean vector and $\\Sigma$ is the covariance matrix for the topic at time $t$.\n"
+    "- DTM captures topic evolution by modeling the topic distributions over time using logistic normal distribution."
    ]
   },
   {
@@ -108,24 +95,87 @@
    "source": [
     "### Generative Process\n",
     "\n",
-    "1. For each time step $t$:\n",
-    "   - For each topic $k$, draw the word distribution $\\phi_{t,k} \\sim \\mathcal{N}(\\mu_{t,k}, \\Sigma)$.\n",
-    "2. For each document $d$ at time $t$:\n",
-    "   - Draw the topic distribution $\\theta_{d,t} \\sim \\text{Dir}(\\alpha)$.\n",
-    "   - For each word $w_{dn}$:\n",
-    "     - Draw a topic $z_{dn} \\sim \\text{Multinomial}(\\theta_{d,t})$.\n",
-    "     - Draw a word $w_{dn} \\sim \\text{Multinomial}(\\phi_{z_{dn},t})$."
+    "DTM models a collection of documents split into sequential time slices. For each time slice $t$, the generative process is as follows:\n",
+    "\n",
+    "1. **Evolution of Topics**:\n",
+    "   - Topics $\\beta_{t,k} $ evolve over time according to a state space model:\n",
+    "   \n",
+    "   $$\n",
+    "   \\beta_{t,k} | \\beta_{t-1,k} \\sim \\mathcal{N}(\\beta_{t-1,k}, \\sigma^2 I)\n",
+    "   $$\n",
+    "   \n",
+    "   where $\\beta_{t,k} $ represents the parameters of topic $k$ at time $t$, modeled as a Gaussian distribution evolving from the previous time slice.\n",
+    "\n",
+    "2. **Topic Proportions**:\n",
+    "   - Document-specific topic proportions $\\theta_{t,d} $ (for document $d$ in time slice $t$) are drawn from a **logistic normal distribution**:\n",
+    "   \n",
+    "   $$\n",
+    "   \\alpha_t | \\alpha_{t-1} \\sim \\mathcal{N}(\\alpha_{t-1}, \\delta^2 I)\n",
+    "   $$\n",
+    "\n",
+    "   where $\\alpha_t $ is the mean of the logistic normal distribution governing the topic proportions for time $t$.\n",
+    "\n",
+    "3. **Document Generation**:\n",
+    "   - For each word in a document, the generative process is as follows:\n",
+    "     - Draw a topic assignment $z$ from the document's topic proportions $\\theta$.\n",
+    "     - Draw a word $w$ from the distribution corresponding to topic $z$:\n",
+    "   \n",
+    "   $$\n",
+    "   p(w | z, \\beta_{t,k}) = \\text{Mult}(\\pi(\\beta_{t,k}))\n",
+    "   $$\n",
+    "\n",
+    "   The logistic mapping function $\\pi(\\beta)$ ensures that the multinomial distribution over words is computed from the natural parameters $\\beta$.\n",
+    "\n",
+    "   $\\pi(\\beta_{k,t})w = \\frac{exp(\\beta_{k,t,w})}{\\Sigma_w exp(\\beta_{k,t,w})}$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Key Assumptions\n",
+    "![DTM_Graphic](./img/DTM_Graphic.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mathematical Formulation:\n",
+    "- **State-Space Model**: The evolution of topics is modeled as a state-space process with Gaussian noise:\n",
+    "  \n",
+    "  $$\n",
+    "  \\beta_{t,k} | \\beta_{t-1,k} \\sim \\mathcal{N}(\\beta_{t-1,k}, \\sigma^2 I)\n",
+    "  $$\n",
     "\n",
-    "- DTM assumes that the topic distributions change smoothly over time.\n",
+    "  This assumes each topic $\\beta$ evolves smoothly over time, with deviations modeled by Gaussian noise.\n",
     "\n",
-    "- The Gaussian prior allows modeling of continuous evolution of topics."
+    "- **Natural Parameterization**: The topic distributions are parameterized as:\n",
+    "  \n",
+    "  $$\n",
+    "  \\beta_{i} = \\log \\left( \\frac{\\pi_i}{\\pi_V} \\right)\n",
+    "  $$\n",
+    "\n",
+    "  where $\\pi$ is the mean parameter of the multinomial distribution, and $\\pi_V$ is the reference term for normalization.\n",
+    "\n",
+    "- **Topic Proportion Model**: Document-specific topic proportions are drawn from a logistic normal distribution, with the mean evolving over time:\n",
+    "  \n",
+    "  $$\n",
+    "  \\alpha_t | \\alpha_{t-1} \\sim \\mathcal{N}(\\alpha_{t-1}, \\delta^2 I)\n",
+    "  $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inference\n",
+    "Posterior inference in DTM is achieved using variational inference methods due to the time dependencies between topics.\n",
+    "\n",
+    "- **Variational Kalman Filtering**: Kalman filtering is applied to approximate the posterior distribution over the evolving topics. Variational parameters are optimized by minimizing the Kullback-Leibler (KL) divergence from the true posterior.\n",
+    "\n",
+    "  Forward-backward equations similar to Kalman filtering provide updates for the variational parameters, enabling tractable inference for sequential topic distributions.\n",
+    "\n",
+    "- **Variational Wavelet Regression**: Another method for inference is wavelet regression, which smooths the evolution of topics by fitting a wavelet basis to the sequences of topics."
    ]
   },
   {
