--- a/notebook/Latent_Dirichlet_Allocation.ipynb
+++ b/notebook/Latent_Dirichlet_Allocation.ipynb
@@ -95,31 +95,105 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Mathematical Formulation\n",
+    "### Generative Process\n",
     "\n",
-    "- The joint distribution of the LDA model for a given document is:\n",
+    "The LDA generative process can be described as follows:\n",
     "\n",
-    "  $$ P(w_d, z_d | \\alpha, \\phi) = P(\\theta_d | \\alpha) \\prod_{n=1}^{N_d} P(z_{dn} | \\theta_d) P(w_{dn} | z_{dn}, \\phi)$$\n",
+    "1. **Document Length**:\n",
+    "   - For each document $d$, choose the number of words $N \\sim \\text{Poisson}(\\xi)$.\n",
     "\n",
+    "2. **Topic Distribution**:\n",
+    "   - Draw a topic distribution $\\theta_d$ from a Dirichlet prior:\n",
+    "   $$\n",
+    "   \\theta_d \\sim \\text{Dir}(\\alpha)\n",
+    "   $$\n",
+    "   where $\\alpha$ is the hyperparameter for the Dirichlet distribution.\n",
     "\n",
-    "- To obtain the marginal likelihood of the document, we integrate out the latent variable $\\theta_d$:\n",
-    "\n",
-    "    $$ P(w_d | \\alpha, \\phi) = \\int_{\\theta_d} P(\\theta_d | \\alpha) \\prod_{n=1}^{N_d} \\sum_{z_{dn}} P(z_{dn} | \\theta_d) P(w_{dn} | z_{dn}, \\phi) d\\theta_d $$"
+    "3. **Word Generation**:\n",
+    "   - For each word $w_{dn}$ in document $d$:\n",
+    "     - Choose a topic $z_{dn}$ from $\\theta_d$:\n",
+    "     $$\n",
+    "     z_{dn} \\sim \\text{Multinomial}(\\theta_d)\n",
+    "     $$\n",
+    "     - Choose a word $w_{dn}$ from the word distribution $\\beta_{z_{dn}}$ conditioned on the topic:\n",
+    "     $$\n",
+    "     w_{dn} \\sim \\text{Multinomial}(\\beta_{z_{dn}})\n",
+    "     $$\n",
+    "     where $\\beta_{z_{dn}}$ is the topic-specific distribution over the vocabulary."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Generative Process\n",
+    "![LDA_Graphic](./img/LDA_Graphic.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mathematical Representation\n",
     "\n",
-    "The generative process of LDA can be described as follows:\n",
+    "- **Dirichlet Distribution**: \n",
+    "  $\\theta$, the distribution of topics for a document, is drawn from a Dirichlet distribution $\\text{Dir}(\\alpha)$. The Dirichlet distribution has the following probability density function($pdf$):\n",
+    "  \n",
+    "  $$\n",
+    "  p(\\theta | \\alpha) = \\frac{\\Gamma(\\sum_{i=1}^{K} \\alpha_i)}{\\prod_{i=1}^{K} \\Gamma(\\alpha_i)} \\prod_{i=1}^{K} \\theta_i^{\\alpha_i - 1}\n",
+    "  $$\n",
     "\n",
-    "1. For each document $ d$, draw a topic distribution $ \\theta_d \\sim \\text{Dir}(\\alpha)$, where $ \\alpha$ is the parameter of the Dirichlet prior on the per-document topic distributions.\n",
+    "  where $\\theta$ is a $K$-dimensional vector, each $\\theta_i \\geq 0$, and $\\sum_{i=1}^{K} \\theta_i = 1$. $\\alpha$ is a $K$-dimensional vector with $\\alpha_i > 0$, and $\\Gamma(\\cdot)$ is the Gamma function.\n",
     "\n",
-    "2. For each word $ w_{dn}$ in document $ d$:\n",
-    "   - Draw a topic $ z_{dn} \\sim \\text{Multinomial}(\\theta_d)$.\n",
-    "   - Draw a word $ w_{dn} \\sim \\text{Multinomial}(\\phi_{z_{dn}})$, where $ \\phi_{z_{dn}}$ is the word distribution associated with topic $ z_{dn}$."
+    "- **Joint Distribution**:\n",
+    "  The joint distribution of the topic mixture $\\theta$, the topics $z$, and the words $w$ is given by:\n",
+    "\n",
+    "  $$\n",
+    "  p(\\theta, z, w | \\alpha, \\beta) = p(\\theta | \\alpha) \\prod_{n=1}^{N} p(z_n | \\theta) p(w_n | z_n, \\beta)\n",
+    "  $$\n",
+    "\n",
+    "  where $\\theta$ is the topic distribution for the document, $z_n$ is the topic for the $n$-th word, and $w_n$ is the word itself.\n",
+    "\n",
+    "- **Marginal Likelihood**:\n",
+    "  By integrating out the topic distribution $\\theta$ and summing over the topic assignments $z$, the marginal probability of a document is:\n",
+    "\n",
+    "  $$\n",
+    "  p(w | \\alpha, \\beta) = \\int p(\\theta | \\alpha) \\prod_{n=1}^{N} \\sum_{z_n} p(z_n | \\theta) p(w_n | z_n, \\beta) d\\theta\n",
+    "  $$\n",
+    "\n",
+    "  This expression involves an intractable integral, which requires approximation methods like variational inference or Gibbs sampling for practical computation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inference\n",
+    "\n",
+    "Inference in LDA is approximated using methods like **variational inference** and **Gibbs sampling**.\n",
+    "\n",
+    "- **Variational Inference:** Variational methods introduce a factorized distribution $q(\\theta, z)$ to approximate the posterior distribution $p(\\theta, z | w)$:\n",
+    "\n",
+    "    $$\n",
+    "    q(\\theta, z | \\gamma, \\phi) = q(\\theta | \\gamma) \\prod_{n=1}^{N} q(z_n | \\phi_n)\n",
+    "    $$\n",
+    "\n",
+    "    Where $\\gamma$ and $\\phi$ are variational parameters. The update equations are:\n",
+    "\n",
+    "    $$\n",
+    "    \\phi_{ni} \\propto \\beta_{i w_n} \\exp(\\mathbb{E}[\\log \\theta_i])\n",
+    "    $$\n",
+    "\n",
+    "    $$\n",
+    "    \\gamma_i = \\alpha_i + \\sum_{n=1}^{N} \\phi_{ni}\n",
+    "    $$\n",
+    "\n",
+    "- **Gibbs Sampling:** The conditional distribution for the topic assignment $z_{dn}$ in Gibbs sampling is:\n",
+    "\n",
+    "    $$\n",
+    "    P(z_{dn} = k | z_{-dn}, w, \\alpha, \\beta) \\propto (\\alpha_k + N_{dk}^{-dn}) \\cdot \\frac{\\beta_{kw_n} + N_{kw_n}^{-dn}}{\\sum_{v} (\\beta_{kv} + N_{kv}^{-dn})}\n",
+    "    $$\n",
+    "\n",
+    "    Where $N_{dk}^{-dn}$ is the count of words in document $d$ assigned to topic $k$, and $N_{kw_n}^{-dn}$ is the count of word $w_n$ in topic $k$ excluding $w_{dn}$.\n"
    ]
   },
   {
@@ -128,9 +202,9 @@
    "source": [
     "### Key Assumptions\n",
     "\n",
-    "- LDA assumes that the words in a document are exchangeable *(bag-of-words assumption)*.\n",
+    "- **Bag-of-Words**: The order of words in a document is ignored, meaning that only the frequency of words matters, not their position.\n",
     "\n",
-    "- The topics are independent given the document's topic distribution."
+    "- **Exchangeability**: Words within a document and documents within a corpus are assumed to be exchangeable, meaning the probability of a sequence of words (or documents) remains unchanged under permutation."
    ]
   },
   {
