change the notation of distribution

--- a/notebook/Biterm_Topic_Model.ipynb
+++ b/notebook/Biterm_Topic_Model.ipynb
@@ -101,13 +101,13 @@
     "1. **Word Distribution for Topics**:\n",
     "   - For each topic $z$, draw a topic-specific word distribution $\\phi_z$ from a Dirichlet prior:\n",
     "   $$\n",
-    "   \\phi_z \\sim \\text{Dir}(\\beta)\n",
+    "   \\phi_z \\sim \\text{Dirichlet}(\\beta)\n",
     "   $$\n",
     "\n",
     "2. **Topic Distribution**:\n",
     "   - Draw a global topic distribution $\\theta$ for the entire corpus from a Dirichlet prior:\n",
     "   $$\n",
-    "   \\theta \\sim \\text{Dir}(\\alpha)\n",
+    "   \\theta \\sim \\text{Dirichlet}(\\alpha)\n",
     "   $$\n",
     "\n",
     "3. **Biterm Generation**:\n",
