--- a/notebook/Dynamic_Topic_Model.ipynb
+++ b/notebook/Dynamic_Topic_Model.ipynb
@@ -121,7 +121,7 @@
     "     - Draw a word $w$ from the distribution corresponding to topic $z$:\n",
     "   \n",
     "   $$\n",
-    "   p(w | z, \\beta_{t,k}) = \\text{Mult}(\\pi(\\beta_{t,k}))\n",
+    "   p(w | z, \\beta_{t,k}) = \\text{Multinomial}(\\pi(\\beta_{t,k}))\n",
     "   $$\n",
     "\n",
     "   The logistic mapping function $\\pi(\\beta)$ ensures that the multinomial distribution over words is computed from the natural parameters $\\beta$.\n",
