change notation of dirichlet distribution

--- a/notebook/Latent_Dirichlet_Allocation.ipynb
+++ b/notebook/Latent_Dirichlet_Allocation.ipynb
@@ -105,7 +105,7 @@
     "2. **Topic Distribution**:\n",
     "   - Draw a topic distribution $\\theta_d$ from a Dirichlet prior:\n",
     "   $$\n",
-    "   \\theta_d \\sim \\text{Dir}(\\alpha)\n",
+    "   \\theta_d \\sim \\text{Dirichlet}(\\alpha)\n",
     "   $$\n",
     "   where $\\alpha$ is the hyperparameter for the Dirichlet distribution.\n",
     "\n",
