--- a/notebook/Latent_Dirichlet_Allocation.ipynb
+++ b/notebook/Latent_Dirichlet_Allocation.ipynb
@@ -136,7 +136,7 @@
     "### Mathematical Representation\n",
     "\n",
     "- **Dirichlet Distribution**: \n",
-    "  $\\theta$, the distribution of topics for a document, is drawn from a Dirichlet distribution $\\text{Dir}(\\alpha)$. The Dirichlet distribution has the following probability density function($pdf$):\n",
+    "  $\\theta$, the distribution of topics for a document, is drawn from a Dirichlet distribution $\\text{Dirichlet}(\\alpha)$. The Dirichlet distribution has the following probability density function($pdf$):\n",
     "  \n",
     "  $$\n",
     "  p(\\theta | \\alpha) = \\frac{\\Gamma(\\sum_{i=1}^{K} \\alpha_i)}{\\prod_{i=1}^{K} \\Gamma(\\alpha_i)} \\prod_{i=1}^{K} \\theta_i^{\\alpha_i - 1}\n",
