--- a/notebook/Biterm_Topic_Model.ipynb
+++ b/notebook/Biterm_Topic_Model.ipynb
@@ -20,7 +20,9 @@
     "\n",
     "- **Linkedin:** https://www.linkedin.com/in/jaeseong-choe-048639250/\n",
     "\n",
-    "- **Personal Webpage:** https://jaeseongchoe.vercel.app/"
+    "- **Personal Webpage:** https://jaeseongchoe.vercel.app/\n",
+    "\n",
+    "- **Youtube Link:** https://youtu.be/MQCo2nRuYjo"
    ]
   },
   {
@@ -658,7 +660,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
