--- a/notebook/Dynamic_Topic_Model.ipynb
+++ b/notebook/Dynamic_Topic_Model.ipynb
@@ -69,7 +69,7 @@
    "source": [
     "### Use Cases\n",
     "\n",
-    "- DTM is used in analyzing temporal trends in topics, such as news articles or scientific literature over the years."
+    "- DTM is used in analyzing temporal trends in topics, such as academic articles or scientific literature over the years."
    ]
   },
   {
