--- a/notebook/Latent_Dirichlet_Allocation.ipynb
+++ b/notebook/Latent_Dirichlet_Allocation.ipynb
@@ -48,7 +48,16 @@
    "source": [
     "### Situation Before LDA\n",
     "\n",
-    "- Before LDA, text mining techniques mainly relied on frequency-based methods such as TF-IDF or clustering analysis without capturing latent semantics in documents."
+    "Before LDA, text mining algorithms had several limitations:\n",
+    "\n",
+    "#### 1. TF-IDF\n",
+    "- TF-IDF represents documents as word frequency vectors but fails to capture word relationships or document topics, limiting its usefulness for semantic analysis.\n",
+    "\n",
+    "#### 2. Latent Semantic Indexing (LSI)\n",
+    "- LSI reduces dimensionality but is limited to linear relationships and lacks a probabilistic model. It also struggles with unseen documents.\n",
+    "\n",
+    "#### 3. Probabilistic Latent Semantic Indexing (pLSI)\n",
+    "- pLSI introduces a probabilistic approach but suffers from overfitting, and it cannot handle new documents since it lacks a generative model for documents."
    ]
   },
   {
@@ -59,9 +68,7 @@
     "\n",
     "- LDA was introduced from the paper *\"Latent Dirichlet Allocation\"* of Blei, D. M., Ng, A. Y., & Jordan, M. I. (2003).\n",
     "\n",
-    "- LDA was developed for capture the hidden thematic structure within large corpora of documents.\n",
-    "\n",
-    "- It offers a generative probabilistic approach that assumes documents are a mixture of topics, with each topic being a distribution over words."
+    "- LDA was developed to overcome these limitations by providing a **generative probabilistic model** that allows for multiple topics in a document, avoids overfitting by using **Dirichlet distributions**, and supports **Bayesian inference** for better topic modeling."
    ]
   },
   {
