--- a/notebook/Biterm_Topic_Model.ipynb
+++ b/notebook/Biterm_Topic_Model.ipynb
@@ -20,9 +20,7 @@
     "\n",
     "- **Linkedin:** https://www.linkedin.com/in/jaeseong-choe-048639250/\n",
     "\n",
-    "- **Personal Webpage:** https://jaeseongchoe.vercel.app/\n",
-    "\n",
-    "- **Youtube Link:** https://youtu.be/MQCo2nRuYjo"
+    "- **Personal Webpage:** https://jaeseongchoe.vercel.app/"
    ]
   },
   {
