--- a/notebook/Biterm_Topic_Model.ipynb
+++ b/notebook/Biterm_Topic_Model.ipynb
@@ -127,7 +127,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![BTM_Graphic](./img/BTM_Graphic.png)"
+    "<p align=\"center\">\n",
+    "  <img src=\"./img/BTM_Graphic.png\">\n",
+    "</p>"
    ]
   },
   {
