--- a/notebook/Biterm_Topic_Model.ipynb
+++ b/notebook/Biterm_Topic_Model.ipynb
@@ -127,9 +127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p align=\"center\">\n",
-    "  <img src=\"./img/BTM_Graphic.png\">\n",
-    "</p>"
+    "<img src=\"./img/BTM_Graphic.png\" width=\"750px\">"
    ]
   },
   {
@@ -660,7 +658,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
