--- a/notebook/BERTopic.ipynb
+++ b/notebook/BERTopic.ipynb
@@ -117,41 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![ToT_Graphic](./img/ToT_Graphic.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Mathematical Representation\n",
-    "\n",
-    "While BERTopic does not rely on a generative probabilistic model like LDA, its core components can be mathematically described as follows:\n",
-    "\n",
-    "1. **Document Embedding**\n",
-    "\n",
-    "- Each document $d$ is transformed into an embedding vector $e_d$ using a transformer model:\n",
-    "\n",
-    "$$ e_d = TransformarModel(d) $$\n",
-    "\n",
-    "\n",
-    "2. **Dimensionality Reduction**\n",
-    "\n",
-    "- The embedding vector $e_d$ is projected into a lower-dimensional space $u_d$ using UMAP:\n",
-    "\n",
-    "$$u_d = UMAP(e_d)$$\n",
-    "\n",
-    "3. Clustering\n",
-    "\n",
-    "- The reduced embedding vector $u_d$ are clustered into $K$ clusters using HDBSCAN:\n",
-    "\n",
-    "$$ Cluster = HDBSCAN({u_d})$$\n",
-    "\n",
-    "4. Class-based TF-IDF (c-TF-IDF)\n",
-    "\n",
-    "- For each cluster $k$ concatenate all documents to form a single class document $D_k$. Calculate the term frequency $TF(t, D_k)$ and document frequency $DF(t)$ across all clusters. The c-TF-IDF score for term $t$ in cluster $k$ is:\n",
-    "\n",
-    "$$c-TF-IDF(t,k) = TF(t, D_k) \\times log(\\frac{N}{DF(t)})$$"
+    "![ToT_Graphic](./img/bertopic_Graphic.png)"
    ]
   },
   {
@@ -26185,7 +26151,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "test",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -26199,7 +26165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
