--- a/notebook/Biterm_Topic_Model.ipynb
+++ b/notebook/Biterm_Topic_Model.ipynb
@@ -14,7 +14,7 @@
     "##### Author information\n",
     "- **Name:** Jaeseong Choe\n",
     "\n",
-    "- **email address:** 21900759@handong.ac.kr\n",
+    "- **email address:** cjssoote@gmail.com\n",
     "\n",
     "- **GitHub:** https://github.com/sorrychoe\n",
     "\n",
