--- a/notebook/BERTopic.ipynb
+++ b/notebook/BERTopic.ipynb
@@ -56,7 +56,7 @@
    "source": [
     "### Why ToT Was Introduced\n",
     "\n",
-    "- BERTopic was introduced from the paper \"TBERTopic: Neural topic modeling with a class-based TF-IDF procedure\" of Maarten Grootendorst. (2022).\n",
+    "- BERTopic was introduced from the paper \"BERTopic: Neural topic modeling with a class-based TF-IDF procedure\" of Maarten Grootendorst. (2022).\n",
     "\n",
     "- BERTopic was introduced to address the limitations of traditional models by incorporating transformer-based embeddings, which capture contextual information, and by utilizing c-TF-IDF for more coherent topic representations"
    ]
